Fixing footer overlap

--- a/gatsby/src/modules/main-nav/main.scss
+++ b/gatsby/src/modules/main-nav/main.scss
@@ -297,6 +297,7 @@
 
 .social {
   margin-top: auto;
+  transition: transform 0.2s ease-in-out;
 
   @include media-breakpoint-down(sm) {
     .site-header & {
@@ -327,6 +328,8 @@
     list-style-type: none;
     text-align: center;
     position: relative;
+    transform: translate3d(0, 0, 0);
+    transition: transform 0.2s ease-in-out;
 
     &:before {
       position: absolute;
@@ -338,6 +341,8 @@
       height: 10.7vh;
       background-color: #b9b9b9;
       content: '';
+      transform: scaleY(1);
+      transition: transform 0.2s ease-in-out;
 
       @include media-breakpoint-down(sm) {
         height: 30px;
@@ -363,6 +368,15 @@
         fill: currentColor;
         transition: fill 0.3s ease-in-out;
       }
+    }
+  }
+
+  &.overlapping {
+    ul:before {
+      transform: scaleY(0);
+    }
+    ul {
+      transform: translate3d(0, -10.7vh, 0);
     }
   }
 }
